@@ -49,6 +49,11 @@ sub _build__paths {    ## no critic (ProhibitUnusedPrivateSubroutines)
     return \@paths;
 }
 
+has content => ( ro, lazy,
+    isa => ArrayRef [ Dir | File ],
+    default => sub { $ARG[0]->_paths },
+);
+
 with 'XML::Ant::BuildFile::Resource';
 
 has _location => (
