@@ -30,6 +30,8 @@ use namespace::autoclean;
 
 =method clear
 
+=method kv
+
 =cut
 
 has _properties => ( rw,
@@ -39,7 +41,7 @@ has _properties => ( rw,
     default  => sub { {} },
     handles  => {
         map { $ARG => $ARG }
-            qw(count get set delete exists defined keys values clear),
+            qw(count get set delete exists defined keys values clear kv),
     },
 );
 
