@@ -18,7 +18,7 @@ above_version = 5.010
 above_version = 5.010
 
 [Documentation::PodSpelling]
-stop_words = filelists os basedir bugtracker classname filelist args arg dir plugins prepended pathref
+stop_words = filelists os basedir bugtracker classname filelist args arg dir plugins prepended pathref concat destfile kv
 
 [Documentation::RequirePodSections]
 lib_sections = NAME | VERSION | SYNOPSIS | DESCRIPTION | BUGS | AUTHOR | COPYRIGHT AND LICENSE
@@ -29,7 +29,7 @@ functions = :builtins
 exclude_functions = print say
 
 [Subroutines::ProhibitCallsToUndeclaredSubs]
-exempt_subs = Carp::carp Carp::croak Moose::around Moose::extends Moose::has Moose::with Moose::Role::has Moose::Role::requires Moose::Role::with Moose::Util::TypeConstraints::as Moose::Util::TypeConstraints::coerce Moose::Util::TypeConstraints::from Moose::Util::TypeConstraints::subtype Moose::Util::TypeConstraints::via MooseX::Has::Sugar::auto_deref MooseX::Has::Sugar::coerce MooseX::Has::Sugar::lazy MooseX::Has::Sugar::lazy_build MooseX::Has::Sugar::required MooseX::Has::Sugar::ro MooseX::Has::Sugar::rw MooseX::Has::Sugar::Minimal::ro MooseX::Singleton::around MooseX::Singleton::has Path::Class::dir Path::Class::file TryCatch::catch TryCatch::try
+exempt_subs = Carp::carp Carp::croak Moose::around Moose::extends Moose::has Moose::with Moose::Role::around Moose::Role::has Moose::Role::requires Moose::Role::with Moose::Util::TypeConstraints::as Moose::Util::TypeConstraints::coerce Moose::Util::TypeConstraints::from Moose::Util::TypeConstraints::subtype Moose::Util::TypeConstraints::via MooseX::Has::Sugar::auto_deref MooseX::Has::Sugar::coerce MooseX::Has::Sugar::lazy MooseX::Has::Sugar::lazy_build MooseX::Has::Sugar::required MooseX::Has::Sugar::ro MooseX::Has::Sugar::rw MooseX::Has::Sugar::Minimal::ro MooseX::Singleton::around MooseX::Singleton::has Path::Class::dir Path::Class::file TryCatch::catch TryCatch::try
 
 [TestingAndDebugging::RequireUseStrict]
 equivalent_modules = Modern::Perl
