@@ -1,5 +1,7 @@
 {{$NEXT}}
-
+    support <concat/> tasks and refid attributes in resources
+    fix bug when default Ant properties are overridden with subsequent
+    references to the main project
 0.209     2011-04-19 11:33:22 America/New_York
     handle <arg pathref="foo"/> elements in <java/> tasks
 0.208     2011-04-19 10:15:02 America/New_York
